refactor css to be more universal

--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,7 @@ select {
 	display: contents;
 }
 
-.source,
-.category,
-.income,
-.expense {
+.cell {
 	padding: 1rem 0;
 	border-bottom: 0.1rem solid #ddd;
 }
