--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,98 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+	max-width: 85rem;
+	margin: 0 auto;
+	padding: 2rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+ul {
+	list-style: none;
+	padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 2rem;
+
+	& h1 {
+		width: 100%;
+	}
+
+	& > *:not(h1) {
+		background-color: rgba(35, 35, 60, 0.471);
+		padding: 1rem 2rem 2rem;
+		border: 0.1rem solid #646cff;
+	}
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#trackingForm {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: stretch;
+	gap: 1.5rem;
+	flex-grow: 1;
+
+	& fieldset {
+		display: flex;
+		flex-direction: column;
+		justify-content: stretch;
+		align-items: stretch;
+		border: none;
+		gap: 0.5rem;
+		padding: 0;
+
+		& > * {
+			flex-grow: 2;
+		}
+	}
 }
 
-.card {
-  padding: 2em;
+input,
+select {
+	padding: 0.75rem 0.5rem;
 }
 
-.read-the-docs {
-  color: #888;
+.balanceSheetContainer {
+	flex-grow: 2;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	/* gap: 2rem; */
+
+	.balance {
+		align-self: flex-end;
+		margin-top: 10rem;
+		padding: 1rem;
+		border: 0.1rem solid #646cff;
+	}
+}
+
+#balanceSheet {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	width: 100%;
+}
+
+.balanceRow {
+	display: contents;
+}
+
+.cell {
+	padding: 1rem;
+	border-bottom: 0.1rem solid #ddd;
+}
+
+.cell.header {
+	font-weight: bold;
+	background-color: rgba(122, 122, 211, 0.184);
+}
+
+.income {
+	color: limegreen;
+}
+
+.expense {
+	color: coral;
 }
